force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/Travel_Expenses_Breakup__c.object-meta.xml
<CustomObject>
    <label>Travel Expenses Breakup</label>
    <nameField>
        <displayFormat>TEB-{000}</displayFormat>
        <label>TE-BreakUP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Expenses Breakup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>