force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <label>Attachment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>