force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Bill_Value__c.field-meta.xml
<CustomField>
    <fullName>Bill_Value__c</fullName>
    <label>Bill Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>