force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Booking_reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_reference__c</fullName>
    <label>Booking reference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>