force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>TE_BreakUP</relationshipName>
    <type>Lookup</type>
</CustomField>