force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Distance_in_Km__c.field-meta.xml
<CustomField>
    <fullName>Distance_in_Km__c</fullName>
    <label>Distance in Km</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>