force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Document_Ref__c.field-meta.xml
<CustomField>
    <fullName>Document_Ref__c</fullName>
    <label>Document Ref</label>
    <length>80</length>
    <type>Text</type>
</CustomField>