force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Expense_Head__c.field-meta.xml
<CustomField>
    <fullName>Expense_Head__c</fullName>
    <label>Expense Head</label>
    <length>150</length>
    <type>Text</type>
</CustomField>