force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Fare__c.field-meta.xml
<CustomField>
    <fullName>Fare__c</fullName>
    <label>Fare</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>