force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <label>From (Date)</label>
    <type>Date</type>
</CustomField>