force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/From_Place__c.field-meta.xml
<CustomField>
    <fullName>From_Place__c</fullName>
    <label>From (Place)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>