force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Fuel_Reimbursement_Km__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Reimbursement_Km__c</fullName>
    <label>Fuel Reimbursement /Km</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>