force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Items__c.field-meta.xml
<CustomField>
    <fullName>Items__c</fullName>
    <label>Items</label>
    <length>100</length>
    <type>Text</type>
</CustomField>