force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Lodge_Name__c.field-meta.xml
<CustomField>
    <fullName>Lodge_Name__c</fullName>
    <label>Lodge Name</label>
    <type>TextArea</type>
</CustomField>