force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Bike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>