force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/No_of_Bills__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bills__c</fullName>
    <label>No of Bills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>