force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Place_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Stay__c</fullName>
    <label>Place of Stay</label>
    <length>100</length>
    <type>Text</type>
</CustomField>