force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Place_Of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Place_Of_Visit__c</fullName>
    <label>Place Of Visit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>