force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Sent_through__c.field-meta.xml
<CustomField>
    <fullName>Sent_through__c</fullName>
    <label>Sent through</label>
    <length>150</length>
    <type>Text</type>
</CustomField>