force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Stayed_With__c.field-meta.xml
<CustomField>
    <fullName>Stayed_With__c</fullName>
    <label>Stayed With</label>
    <length>100</length>
    <type>Text</type>
</CustomField>