force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <label>To(Date)</label>
    <type>Date</type>
</CustomField>