force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/To_Place__c.field-meta.xml
<CustomField>
    <fullName>To_Place__c</fullName>
    <label>To(Place)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>