force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/fields/Travel_Expense__c.field-meta.xml
<CustomField>
    <fullName>Travel_Expense__c</fullName>
    <label>Travel Expense</label>
    <referenceTo>Travel_Expenses__c</referenceTo>
    <relationshipName>TE_BreakUP</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>