force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/recordTypes/Courier.recordType-meta.xml
<RecordType>
    <fullName>Courier</fullName>
    <active>true</active>
    <label>Courier</label>
</RecordType>