force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/recordTypes/Day_Batta.recordType-meta.xml
<RecordType>
    <fullName>Day_Batta</fullName>
    <active>true</active>
    <label>Day Batta</label>
</RecordType>