force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/recordTypes/Fuel.recordType-meta.xml
<RecordType>
    <fullName>Fuel</fullName>
    <active>true</active>
    <label>Fuel</label>
</RecordType>