force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/recordTypes/Local_Conveyance.recordType-meta.xml
<RecordType>
    <fullName>Local_Conveyance</fullName>
    <active>true</active>
    <label>Local Conveyance</label>
</RecordType>