force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/recordTypes/Misc.recordType-meta.xml
<RecordType>
    <fullName>Misc</fullName>
    <active>true</active>
    <label>Misc</label>
</RecordType>