force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/recordTypes/Mobile_Data.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Data</fullName>
    <active>true</active>
    <label>Mobile Data</label>
</RecordType>