force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/recordTypes/Stationery.recordType-meta.xml
<RecordType>
    <fullName>Stationery</fullName>
    <active>true</active>
    <label>Stationery</label>
</RecordType>