force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/recordTypes/Toll.recordType-meta.xml
<RecordType>
    <fullName>Toll</fullName>
    <active>true</active>
    <label>Toll</label>
</RecordType>