force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/recordTypes/Travel_Batta.recordType-meta.xml
<RecordType>
    <fullName>Travel_Batta</fullName>
    <active>true</active>
    <label>Travel Batta</label>
</RecordType>