force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/recordTypes/Travel_Fare.recordType-meta.xml
<RecordType>
    <fullName>Travel_Fare</fullName>
    <active>true</active>
    <label>Travel Fare</label>
</RecordType>