force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/recordTypes/Xerox.recordType-meta.xml
<RecordType>
    <fullName>Xerox</fullName>
    <active>true</active>
    <label>Xerox</label>
</RecordType>