force-app/force-app/force-app/main/default/objects/Travel_Expenses_Breakup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Travel_Expense__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>